--- a/intl.zh-CN/用户指南/日志分析/查询实时日志分析/自定义日志查询与分析.md
+++ b/intl.zh-CN/用户指南/日志分析/查询实时日志分析/自定义日志查询与分析.md
@@ -4,7 +4,7 @@
 
 日志查询语句由查询语法（Search）和分析语法（Analytics）两部分组成，中间通过|进行分隔：
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812382913492_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422613492_zh-CN.png)
 
 查询语法和分析语法都可选。
 
@@ -87,16 +87,16 @@
         __topic__:local-dns and time_usecond in [1000000,10000000]
         ```
 
-    详细的查询语法说明请参考[索引与查询](https://help.aliyun.com/document_detail/43772.html)。
+    详细的查询语法说明请参考[简介](../../../../../intl.zh-CN/用户指南/查询与分析/简介.md#)。
 
 
 ## 分析语法 {#section_g2n_jbk_kfb .section}
 
-您可以使用SQL/92语法对日志数据进行分析与统计。日志服务支持的语法与函数参见[实时分析简介](https://help.aliyun.com/document_detail/53608.html)。
+您可以使用SQL/92语法对日志数据进行分析与统计。日志服务支持的语法与函数参见[实时分析简介](../../../../../intl.zh-CN/用户指南/查询与分析/实时分析简介.md#)。
 
 分析语句中可以省略SQL标准语法中的from表格名语句，即from log。
 
-日志数据默认返回前100条，您可以通过[LIMIT语法](https://help.aliyun.com/document_detail/63470.html)修改返回范围。
+日志数据默认返回前100条，您可以通过[LIMIT语法](../../../../../intl.zh-CN/用户指南/查询与分析/SQL分析语法与功能/LIMIT语法.md#)修改返回范围。
 
 ## 基于日志时间的查询分析 {#section_crn_h3k_kfb .section}
 
@@ -114,7 +114,7 @@
     limit 10
     ```
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812382913497_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422613497_zh-CN.png)
 
 -   **计算时间**
 
@@ -132,7 +132,7 @@
 
     这里使用`round((to_unixtime(now()) - __time__)/86400, 1)`，先用to\_unixtime``将now\(\)获取的时间转化为Unix时间戳，再与内置时间字段`__time__`相减，获得已经过去的时间秒数。最后除以86400，即一天的总秒数，再用函数round\(data, 1\)圆整为小数点后1位数的值，可得出每条攻击日志距离现在已经过去了几天。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812382913498_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422613498_zh-CN.png)
 
 -   **基于特定时间分组统计**
 
@@ -148,9 +148,9 @@
     
     ```
 
-    这里使用内置字段`__time__`，传给函数`date_trunc('day', ..)`对时间按天对齐，将每条日志分组到了其所属的天的分区中进行统计总数（count\(1\)），并按照分区时间块排序。函数`date_trunc`第一个参数提供更多其他单位进行对齐，包括`second`、`miniute`、`hour`、`week`、`month`、`year`等，函数说明参见[日期和时间函数](https://help.aliyun.com/document_detail/63451.html)。
+    这里使用内置字段`__time__`，传给函数`date_trunc('day', ..)`对时间按天对齐，将每条日志分组到了其所属的天的分区中进行统计总数（count\(1\)），并按照分区时间块排序。函数`date_trunc`第一个参数提供更多其他单位进行对齐，包括`second`、`miniute`、`hour`、`week`、`month`、`year`等，函数说明参见[日期和时间函数](../../../../../intl.zh-CN/用户指南/查询与分析/SQL分析语法与功能/日期和时间函数.md#)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812382913499_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422713499_zh-CN.png)
 
 -   **基于灵活时间分组统计**
 
@@ -169,13 +169,13 @@
 
     使用计算的内置时间字段计算`__time__ - __time__% 300`，同时使用函数`from_unixtime`进行格式化，将每条日志分组到了一个5分钟（300秒）的分区中进行统计总数`（count(1)）`，并按照分区时间块排序，获得前1000条，相当于选择时间内的前83小时的数据。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812382913500_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422713500_zh-CN.png)
 
     折线图显示如下：
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812382913501_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422713501_zh-CN.png)
 
-    更多关于时间解析的函数，例如将一个时间格式转化为另外一个格式，需要使用 `date_parse`与`date_format` ，函数说明参见[日期和时间函数](https://help.aliyun.com/document_detail/63451.html)。
+    更多关于时间解析的函数，例如将一个时间格式转化为另外一个格式，需要使用 `date_parse`与`date_format` ，函数说明参见[日期和时间函数](../../../../../intl.zh-CN/用户指南/查询与分析/SQL分析语法与功能/日期和时间函数.md#)。
 
 
 ## 基于客户端IP的查询分析 {#section_t23_c4k_kfb .section}
@@ -196,11 +196,11 @@
 
     这里先用函数`ip_to_country`得到这个登录源IP`warn_ip`对应的国家信息。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812382913502_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422713502_zh-CN.png)
 
     世界地图展示如下：
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812383013503_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422713503_zh-CN.png)
 
 -   登录者身份分布
 
@@ -215,11 +215,11 @@
 
     这里使用了另外一个IP函数`ip_to_province`来获得一个IP的所属省份。如果是中国以外的IP地址，会尝试转化为其国家所属省份（州），但在选择中国地图展示时，会无法展示出来。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812383013504_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422713504_zh-CN.png)
 
     中国地图方式展示如下：
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812383013505_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422713505_zh-CN.png)
 
 -   登录者热力分布
 
@@ -235,12 +235,12 @@
 
     这里使用了另一个IP函数`ip_to_geo`来获得一个IP的所在经纬度，并获取前1万条。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812383013506_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422713506_zh-CN.png)
 
     高德地图展示如下：
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/154812383013507_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22757/155228422713507_zh-CN.png)
 
-    **说明：** 基于IP的更多解析功能，例如获得IP所属运营商 `ip_to_provider`、判断IP是内网还是外网 `ip_to_domain`等，可以参考[IP地理函数](https://help.aliyun.com/document_detail/63458.html)。
+    **说明：** 基于IP的更多解析功能，例如获得IP所属运营商 `ip_to_provider`、判断IP是内网还是外网 `ip_to_domain`等，可以参考[IP地理函数](../../../../../intl.zh-CN/用户指南/查询与分析/SQL分析语法与功能/IP地理函数.md#)。
 
 
