--- a/intl.zh-CN/用户指南/安全告警/安全告警类型.md
+++ b/intl.zh-CN/用户指南/安全告警/安全告警类型.md
@@ -1,8 +1,13 @@
 # 安全告警类型 {#concept_l5g_fzc_zdb .concept}
 
-态势感知全面和实时监测您资产的安全状况，并通过告警自动化关联分析能力帮助您更快速、准确地定位到安全风险事件，并对入侵事件和风险提供全面和准确的分析。
+态势感知支持进程异常、网站后门、异常登录、恶意进程等安全告警类型，通过全面的安全告警类型帮助您实时掌握您主机的安全态势。
 
 **安全告警类型**
+
+**说明：** 
+
+-   2018年12月20日起，态势感知**基础版**只支持异常登录和其他-DDoS类型安全告警，若您需要启用更多高级威胁检测能力，需开通态势感知企业版服务）。
+-   态势感知**基础版**和**企业版**可检测的告警类型差异参见[功能特性列表](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
 |告警名称|告警说明|
 |----|----|
@@ -15,7 +20,6 @@
 |**异常登录**|检测服务器上的异常登录行为。通过设置合法登录IP、时间及账号，对于例外的登录行为进行告警。支持手动添加和自动更新常用登陆地，对指定资产的异地登陆行为进行告警。|
 |**异常事件**|程序运行过程中发生的异常行为。|
 |**敏感文件篡改**|对服务器中的敏感文件进行恶意修改。|
-|**主机异常**|查看在您服务器检测到的异常进程行为、敏感文件篡改、异常网络连接、异常事件和可疑文件等。|
 |**恶意进程（病毒云查杀）**|采用云+端的查杀机制，对服务器进行实时检测，并对检测到的病毒文件提供实时告警。您可通过控制台对病毒程序进行处理。详细信息参见[病毒云查杀](intl.zh-CN/产品简介/产品优势/病毒云查杀.md#)。|
 |**异常网络连接**|网络显示断开或不正常的网络连接状态。|
 |**异常账号**|非合法登陆账号。|
