--- a/cn.zh-CN/用户指南/总览.md
+++ b/cn.zh-CN/用户指南/总览.md
@@ -4,7 +4,7 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22732/154805242132714_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22732/155229493032714_zh-CN.png)
 
 **总览**页面展示以下模块：
 
@@ -16,7 +16,7 @@
 -   威胁统计数据：
     -   **安全告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击安全告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
     -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/用户指南/攻击分析.md#)页面。
-    -   **应急漏洞**：显示资产中最新发现的应急漏洞信息。单击漏洞总数值可跳转到[漏洞管理](intl.zh-CN/用户指南/漏洞管理/主机漏洞/主机漏洞管理.md#)页面。
+    -   **应急漏洞**：显示资产中最新发现的[应急漏洞](intl.zh-CN/用户指南/漏洞管理/应急漏洞.md#)信息。
     -   **基线检查**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线风险总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/主机基线检查概述.md#)页面。
 -   **云平台最佳安全实践**：检测到的云产品基线风险信息。
 -   **安全运营**：展示一周内已处理的告警、漏洞、基线配置数量柱状图。
@@ -24,7 +24,7 @@
 
 ## 升级企业版、扩充资产规模、续费 {#section_wqz_1zk_wfb .section}
 
-态势感知支持基础版和企业版，您可在**总览**页面右上角查看态势感知的版本信息。基础版和企业版支持的功能参见[功能特性](https://help.aliyun.com/knowledge_detail/42306.html)。
+态势感知支持基础版和企业版，您可在**总览**页面右上角查看态势感知的版本信息。基础版和企业版支持的功能参见[功能特性](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
 -   **基础版**：页面右上角显示态势感知的版本信息和**升级企业版**操作按钮。升级到企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
 -   **企业版**：页面右上角显示态势感知的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
@@ -45,13 +45,13 @@
 |------|----|
 |缺少安全运营中心。|建立纵深防御体系。如有疑问请提交工单了解详情。|
 |存在未修复漏洞。|修复漏洞，详见漏洞管理。|
-|存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警](https://help.aliyun.com/document_detail/68388.html)。|
+|存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)。|
 |主机缺乏安全防护。|开通安骑士企业版。|
-|保护状态为离线（Agent未安装或离线）。|[安装Agent](https://help.aliyun.com/document_detail/68597.html)。|
-|存在Web-CMS漏洞。|[修复Web-CMS漏洞](https://help.aliyun.com/document_detail/34366.html)。|
-|存在系统软件漏洞。|[修复软件漏洞](https://help.aliyun.com/document_detail/54567.html)。|
-|基线检查存在风险。|[修复基线检查漏洞](https://help.aliyun.com/document_detail/59003.html)。|
-|存在异常登录事件。|查看并处理[异常登录](https://help.aliyun.com/document_detail/52786.html)。|
-|存在网站后门威胁。|查看和处理[网站后门](https://help.aliyun.com/document_detail/52788.html)文件。|
+|保护状态为离线（Agent未安装或离线）。|[安装Agent](intl.zh-CN/用户指南/接入态势感知/安装Agent.md#)。|
+|存在Web-CMS漏洞。|修复[Web-CMS漏洞](../../../../../intl.zh-CN/.md#)。|
+|存在系统软件漏洞。|修复[软件漏洞](../../../../../intl.zh-CN/.md#)。|
+|基线检查存在风险。|修复[基线检查](../../../../../intl.zh-CN/用户指南/安全预防/基线检查.md#)漏洞。|
+|存在异常登录事件。|查看并处理[异常登录](../../../../../intl.zh-CN/用户指南/入侵检测/异常登录.md#)。|
+|存在网站后门威胁。|查看和处理[网站后门](../../../../../intl.zh-CN/用户指南/入侵检测/网站后门.md#)文件。|
 |存在主机异常。|对主机异常事件进行处理。|
 
