--- a/intl.zh-CN/快速入门/快速入门.md
+++ b/intl.zh-CN/快速入门/快速入门.md
@@ -14,7 +14,7 @@
 4.  您可在态势感知控制台查看并处理服务器上的弱点及安全事件，提升服务器的安全性： 
     -   定位到资产列表页面，查看当前阿里云账号下的服务器的安全状态明细，您也可以为服务器资产添加标签、进行分组，以便于管理。详细功能介绍，请参考[资产列表](../../../../../intl.zh-CN/用户指南/资产列表.md#)。
     -   定位到安全告警页面，查看服务器上的所有异常行为记录，如异常登录、暴力破解、网站后门、异常网络连接、异常进程、敏感文件篡改、恶意进程等。详细功能介绍，请参考[安全告警](../../../../../intl.zh-CN/用户指南/安全告警/安全告警类型.md#)。
-    -   定位到**漏洞管理** \> **主机漏洞**页面，查看和修复服务器上的Linux漏洞、Windows漏洞、Web-CMS漏洞等。详细功能介绍，请参考[主机漏洞管理](../../../../../intl.zh-CN/用户指南/主机漏洞管理.md#)。
+    -   定位到**漏洞管理**页面，查看和修复服务器上的[Linux漏洞](../../../../../intl.zh-CN/用户指南/漏洞管理/Linux软件漏洞.md#)、[Windows漏洞](../../../../../intl.zh-CN/用户指南/漏洞管理/Windows系统漏洞.md#)、[Web-CMS漏洞](../../../../../intl.zh-CN/用户指南/漏洞管理/Web-CMS漏洞.md#)和[应急漏洞](../../../../../intl.zh-CN/用户指南/漏洞管理/应急漏洞.md#)等。
     -   定位到**基线配置核查** \> **主机基线**页面，查看并处理态势感知检测到服务器上的配置风险项。详细功能介绍，请参考[主机基线检查](../../../../../intl.zh-CN/用户指南/基线检查/主机基线检查概述.md#)。
     -   定位到**更多功能** \> **资产指纹**页面，查看资产清点信息，包括服务器中运行的进程、启用的系统账号、开放的端口、使用的软件版本、网站后台登录情况。详细功能介绍，请参考[资产指纹](../../../../../intl.zh-CN/用户指南/资产指纹.md#)。
     -   定位到**更多功能** \> **日志检索**页面，搜索相应日志记录，支持的日志源包括进程日志、网络日志、登录及账号日志等10种类型。详细功能介绍，请参考[使用日志检索](../../../../../intl.zh-CN/用户指南/日志检索/使用日志检索.md#)。
