--- a/intl.zh-CN/用户指南/日志分析/高级管理.md
+++ b/intl.zh-CN/用户指南/日志分析/高级管理.md
@@ -4,22 +4,22 @@
 
 ## 操作步骤 {#section_xwt_h5z_kfb .section}
 
-1.  登陆[态势感知控制台](https://yundun.console.aliyun.com/?spm=5176.2020520001.1011.3.73c44bd3yVlioF&p=sas#/sas/overviews)。
+1.  登录[态势感知控制台](https://account.alibabacloud.com/login/login.htm)。
 2.  单击左侧导航栏**日志分析**。
 3.  单击**日志分析**页面右上角的**高级设置**按钮。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/153933028813596_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/155237029313596_zh-CN.png)
 
 4.  在日志服务高级管理对话框中单击**前往**打开日志库控制台进行相关操作。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/153933028813597_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/155237029313597_zh-CN.png)
 
     具体高级操作参见：
 
-    -   [告警与通知](https://help.aliyun.com/document_detail/91784.html)
-    -   [实时订阅与消费](https://help.aliyun.com/document_detail/28997.html)
-    -   [数据投递](https://help.aliyun.com/document_detail/43724.html)
-    -   [对接其他可视化](https://help.aliyun.com/document_detail/60952.html)
+    -   [告警与通知](../../../../../intl.zh-CN/用户指南/告警/简介.md#)
+    -   [实时订阅与消费](../../../../../intl.zh-CN/用户指南/实时消费/简介.md#)
+    -   [数据投递](../../../../../intl.zh-CN/用户指南/数据投递/简介.md#)
+    -   [对接其他可视化](../../../../../intl.zh-CN/用户指南/可视化分析/其他可视化方案/对接Grafana.md#)
 
-**说明：** 除了通过管理控制台进行操作外，日志分析服务还提供了 API（Application Programming Interface）方式写入、查询日志数据，管理您的项目及日志库等。API参考详见[日志分析API参考](https://help.aliyun.com/document_detail/93452.html)。
+**说明：** 除了通过管理控制台进行操作外，日志分析服务还提供了 API（Application Programming Interface）方式写入、查询日志数据，管理您的项目及日志库等。API参考详见[日志分析API参考](https://www.alibabacloud.com/help/zh/doc-detail/93452.htm?spm=a2c63.l28256.b99.74.16b01de47z2muk)。
 
