--- a/intl.zh-CN/产品简介/产品优势.md
+++ b/intl.zh-CN/产品简介/产品优势.md
@@ -1,8 +1,8 @@
 # 产品优势 {#concept_mqt_kvb_zdb .concept}
 
-云盾态势感知帮助您建立完整的云上安全体系：通过安全告警实时抵御恶意入侵；使用漏洞和基线配置检测消除系统弱点，预防恶意攻击；提供安全态势分析、安全日志检索，呈现安全可视化界面，满足事后追溯和分析需求。
+阿里云云安全中心帮助您建立完整的云上安全体系：通过安全告警实时抵御恶意入侵；使用漏洞和基线配置检测消除系统弱点，预防恶意攻击；提供安全态势分析、安全日志检索，呈现安全可视化界面，满足事后追溯和分析需求。
 
-态势感知具有以下优势：
+云安全中心具有以下优势：
 
 -   **安全事件告警和检索**
 
@@ -26,6 +26,21 @@
 
 -   **全量日志分析**
 
-    日志服务提供准确实时的态势感知日志查询与分析功能，提供主机进程自启动、对外网络连接、系统登录、五元组、DNS请求等全量原始日志检索。支持创建报表和告警。
+    日志服务提供准确实时的云安全中心日志查询与分析功能，提供主机进程自启动、对外网络连接、系统登录、五元组、DNS请求等全量原始日志检索。支持创建报表和告警。
 
+
+## 病毒云查杀 {#section_ep3_yfc_chb .section}
+
+云安全中心支持病毒查杀（以下简称“云查杀”）集成了国内外多个主流的病毒查杀引擎，并利用阿里云海量威胁情报数据和自主研发的基于机器学习、深度学习异常检测模型，为用户提供全面和实时的病毒检测和防护服务。
+
+云安全中心采用云+端的查杀机制，客户端负责采集进程信息，上报到云端控制中心进行病毒样本检测。若判断为恶意进程，支持用户进行停止进程、隔离文件等处理。
+
+目前云查杀每天检测数亿文件，实时服务百万云上主机。
+
+病毒云查杀提供以下检测能力：
+
+-   **深度学习检测引擎（自主研发）**：云盾深度学习检测引擎，使用深度学习技术，基于海量攻防样本，专门打造的一款适用于云环境的恶意文件检测引擎，智能识别未知威胁，是传统病毒查杀引擎的有力支撑。
+-   **云沙箱（自主研发）**：真实还原云上环境，监控恶意样本攻击行为，结合大数据分析、机器学习建模等技术，自动化检测和发现未知威胁，提供有效的动态分析检测能力。
+-   **集成国内外主流病毒查杀引擎**：云查杀集成国内外多款优秀的杀毒引擎，可对病毒病进行实时更新。
+-   **威胁情报检测**：基于云盾威胁情报数据，配合主机异常行为检测模型，实现多维度检测异常进程和恶意行为。
 
