--- a/cn.zh-CN/产品简介/产品优势.md
+++ b/cn.zh-CN/产品简介/产品优势.md
@@ -44,3 +44,20 @@
 -   **集成国内外主流病毒查杀引擎**：云查杀集成国内外多款优秀的杀毒引擎，可对病毒病进行实时更新。
 -   **威胁情报检测**：基于云盾威胁情报数据，配合主机异常行为检测模型，实现多维度检测异常进程和恶意行为。
 
+## 云查杀覆盖的病毒类型 {#section_ntm_psy_y2b .section}
+
+云查杀是阿里云安全技术与攻防专家经验融合的最佳实践，从数据的采集、脱敏、识别、分析、隔离到恢复已形成安全闭环，同时支持用户在云安全中心控制台中进行隔离和恢复处理。
+
+云查杀覆盖以下病毒类型：
+
+|病毒类型|病毒描述|
+|----|----|
+|挖矿程序|非法占用服务器资源进行虚拟货币挖掘的程序。|
+|蠕虫病毒|利用网络进行复制和传播的恶意程序，能够在短时间内大范围传播。|
+|勒索病毒|利用各种加密算法对文件进行加密，感染此病毒一般无法解密，如WannaCry等。|
+|木马程序|特洛伊木马，可受外部用户控制以窃取本机信息或者控制权、盗用用户信息等的程序，可能会占用系统资源。|
+|DDoS木马|用于控制肉鸡对目标发动攻击的程序，会占用本机带宽攻击其他服务器，影响用户业务的正常运行。|
+|后门程序|黑客入侵系统后留下的恶意程序，通过该程序可以随时获得主机的控制权或进行恶意攻击。|
+|病毒型感染|运行后感染其他正常文件，将可能携带有感染能力的恶意代码植入正常程序，严重时可能导致整个系统感染。|
+|恶意程序|其他威胁系统和数据安全的程序，比如黑客程序等。|
+
