--- a/cn.zh-CN/用户指南/基线检查/基线检查概述.md
+++ b/cn.zh-CN/用户指南/基线检查/基线检查概述.md
@@ -8,18 +8,23 @@
 
 基线检查默认每天6:00-12:00进行一次全面的自动检测。您可以自行添加和管理基线扫描策略，自定义需要检查的基线项目、检查周期、检测触发时间和应用该策略的服务器。
 
-**说明：** 部分弱密码检测项（例如：MySQL弱密码检测、SQLServer弱密码检测可能采用尝试登录的方式进行检测，从而会占用一定的服务器资源、产生较多的登录失败记录）和系统等保检测项默认关闭。如果您需要检查该项目，请确认上述风险后，在自定义基线扫描策略时勾选这些检测项目。
+## 限制说明 {#section_sng_3xk_dhb .section}
+
+基线检查功能为云安全中心的增值服务，仅**企业版**用户可开通和使用该服务。基础版和高级版用户都需先升级到企业版才可使用基线检查功能。
+
+部分弱密码检测项（例如：MySQL弱密码检测、SQLServer弱密码检测可能采用尝试登录的方式进行检测，从而会占用一定的服务器资源、产生较多的登录失败记录）和系统等保检测项默认关闭。如果您需要检查该项目，请确认上述风险后，在自定义基线扫描策略时勾选这些检测项目。
 
 ## 基线检测内容 { .section}
 
-|分类|检测项|
+|基线检查项分类|检测项|
+|-------|---|
 |数据库|Redis合规检查、数据库高危配置|
-|系统合规基线|CentOS Linux 6和7合规基线检测和安全基线检查|
-|Debian Linux 8安全基线检查|
-|Linux Ubuntu合规基线检查|
-|Windows 2008 R2合规基线和安全检查|
-|Windows 2012 R2合规基线和安全基线检查|
-|Debian Linux安全基线检查|
+|系统|等保合规基线检查对标中国等保2.0第二/三等级保护基本要求的部分检查项目；安全基线检查对标阿里云、CIS标准：-   CentOS Linux 6/7等保合规基线检查和安全基线检查
+-   Linux Ubuntu等保合规基线检查和安全基线检查
+-   Debian Linux等保合规基线检查和安全基线检查
+-   Windows 2008 R2/2012 R2等保合规检查和安全基线检查
+
+|
 |弱密码检测|Postgre弱密码检测|
 |SSH弱密码检测|
 |FTP匿名登录检测|
