--- a/cn.zh-CN/产品简介/功能特性.md
+++ b/cn.zh-CN/产品简介/功能特性.md
@@ -1,37 +1,39 @@
 # 功能特性 {#concept_fc1_xvb_zdb .concept}
 
-云盾态势感知提供基础版及企业版两个版本。
+云盾云安全中心提供基础版、企业版和高级版3个版本。
 
--   基础版免费提供异常登录检测、DDoS威胁检测和主机漏洞检测服务。
+-   基础版免费提供异常登录检测、DDoS威胁检测和漏洞检测服务。
 
-    **说明：** 2018年12月20日起，态势感知基础版只支持**异常登录**和**其他-DDoS**类型安全告警。
+    **说明：** 2018年12月20日起，云安全中心基础版只支持**异常登录**和**其他-DDoS**类型安全告警。若您需要启用更多高级威胁检测能力，可以通过试用云安全中心企业版功能（试用时长为7天）。若您此前已试用过企业版，需提工单再次申请试用资格。
 
--   企业版按照包年包月方式收取服务费用，提供安全告警、主机漏洞检测及修复、基线检查、资产指纹和日志检索等全面的安全服务。
+-   高级版按照包年包月方式收取服务费用，提供安全告警、漏洞检测及修复、安全报告等安全服务。
+-   企业版按照包年包月方式收取服务费用，提供安全告警、漏洞检测及修复、基线检查、资产指纹、攻击分析、等全面的安全服务。
 
-## 态势感知基础版和企业版功能对比 {#section_gmh_xvb_zdb .section}
+## 云安全中心基础版、高级版和企业版功能对比 {#section_gmh_xvb_zdb .section}
 
-下表罗列了态势感知的功能详情以及基础版和企业版之间的功能差异，其中用到标识：
+下表罗列了云安全中心的功能详情3个版本之间的功能差异，其中用到的标识：
 
 -   ×：表示不包含在服务范围中。
 -   √：表示包含在服务范围中。
 -   增值：表示需要在购买服务时单独勾选，才包含在服务范围中。
 
-|功能|功能项|功能详情|基础版|企业版|
-|--|---|----|---|---|
+|功能|功能项|功能详情|基础版|高级版|企业版|
+|--|---|----|---|---|---|
 |安全告警|异常登录检测|【基础登录检测】-   【非常用登录地登录】系统自动记录ECS常用登录地（支持手动添加），若在非常用登录地进行登录，则触发告警。
 -   【暴力破解】检测ECS在多次尝试登录失败后最终登录成功的情况，这类情形很有可能是密码被暴力破解。
 
-|√|√|
+|√|√|√|
 |【高级登录监控】-   【非合法IP登录】开启后，允许用户配置ECS合法登录IP（如堡垒机IP、办公网IP等）；若使用非指定的IP登录，则触发告警。
 -   【非合法账号登录】开启后，允许用户配置ECS合法登录账号；若使用非合法账号登录，则触发告警。
 -   【非合法时间登录】开启后，允许用户配置合法登录时间（如工作时间）；若在非合法登录时间登录，则触发告警。
 
-|X|√|
+|X|√|√|
+|异常账户|基于用户行为分析，对异常可以账号登录系统进行检测。|X|√|√|
 |安全告警|网站后门查杀|【Webshell检测】主机+网络双重检测机制，检测PHP、ASP、JSP等类型的网站脚本文件。-   主机检测：实时监控主机上网站目录文件变化。
 -   网络检测：通过还原后门文件及分析网络协议进行检测。
 
-|X|√|
-|【Webshell查杀】支持在控制台一键隔离检测出来的Webshell文件。已隔离文件在30天内可以恢复。|X|√|
+|X|√|√|
+|【Webshell查杀】支持在控制台一键隔离检测出来的Webshell文件。已隔离文件在30天内可以恢复。|X|√|√|
 |安全告警|恶意进程（云查杀）|【病毒检测】定期扫描进程并监控进程启动事件，通过云查杀机制检测恶意病毒和木马进程。【病毒查杀】支持在控制台一键中止进程和隔离恶意文件。
 
 【病毒查杀范围】
@@ -47,7 +49,7 @@
 -   更新机制：病毒版本部署在云端，由阿里云统一控制，实时更新，客户端本地无检测引擎。
 -   病毒样本能力：基本覆盖全种类病毒，在云端集成国内外主流杀毒引擎、阿里云自研沙箱和机器学习引擎等。
 
-|X|√|
+|X|√|√|
 |安全告警|进程异常行为|【异常行为检测】通过云上真实的攻防场景对入侵链路还原，建立进程行为白名单，对于进程的非法行为、黑客的入侵过程进行告警。【异常行为检测范围】
 
 -   反弹Shell：检测Bash进程执行可疑指令，服务器被远程控制执行任意命令等。
@@ -58,7 +60,7 @@
 
 【异常行为检测能力】为数百个进程建立了近千个行为模型，通过比对模型分析异常行为。
 
-|X|√|
+|X|√|√|
 |安全告警|敏感文件篡改|【篡改检测】实时监控敏感目录及文件，对于异常的读取、写入、删除等敏感操作进行告警。【文件篡改检测范围】
 
 -   系统文件篡改：检测Bash、ps命令进程被恶意替换，隐藏的非法进程运行等。
@@ -66,20 +68,25 @@
 -   网站挂马篡改：检测网站被加入恶意代码，造成访问者自动下载木马病毒。
 -   其他可疑事件：检测Linux、MysqlDB等被勒索软件篡改登录界面、留下邮箱或比特币钱包地址等情形。
 
-|X|√|
+|X|√|√|
 |安全告警|异常网络连接|【异常连接】在主机层和网络层对网络连接进行监控，识别非法的连接行为，并进行告警。【异常连接检测范围】
 
 -   主动外连：可疑shell反弹、Bash主动外连等主动外连到可疑IP。
 -   恶意攻击：被种植恶意软件，对外发动SYN-Flood、UDP-Flood、ICMP-Flood等恶意攻击。
 -   可疑通信：检测后门程序通信、可疑Webshell通信行为等。
 
-|X|√|
-|漏洞管理|Linux软件漏洞|【Linux软件漏洞检测】对标CVE官方漏洞库，采用OVAL匹配引擎进行软件版本比对，对当前使用的软件版本中存在的漏洞进行告警。|√|√|
-|【漏洞修复】支持一键运行update升级命令修复漏洞，以及生成漏洞修复命令，用于手动修复。|X|√|
-|漏洞管理|Windows系统漏洞|【Windows系统漏洞检测】同步微软官网补丁源，对高危及有影响的漏洞进行检测和提醒。|√|√|
-|【漏洞修复】支持一键下载补丁文件并静默安装更新，需要重启的漏洞会进行提醒。|X|√|
-|漏洞管理|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。|√|√|
-|【漏洞修复】自研漏洞补丁，支持一键修复，通过文件替换、修改等方式从源代码级别修复漏洞。|X|√|
+|X|√|√|
+|安全告警|云产威胁检测|基于用户行为分析，对云产品的异常使用进行检测。|X|X|√|
+|安全告警|应用事件检测|对通过应用入侵的行为进行检测，如：SQLServer。|X|√|√|
+|安全告警|自动化攻击溯源|支持多类攻击自动化攻击溯源，溯源出攻击IP和主机中的入侵弱点。|X|X|√|
+|安全告警|其他|DDoS攻击行为检测。|X|X|√|
+|漏洞管理|Linux软件漏洞|【Linux软件漏洞检测】对标CVE官方漏洞库，采用OVAL匹配引擎进行软件版本比对，对当前使用的软件版本中存在的漏洞进行告警。|√|√|√|
+|【漏洞修复】支持一键运行update升级命令修复漏洞，以及生成漏洞修复命令，用于手动修复。|X|√|√|
+|漏洞管理|Windows系统漏洞|【Windows系统漏洞检测】同步微软官网补丁源，对高危及有影响的漏洞进行检测和提醒。|√|√|√|
+|【漏洞修复】支持一键下载补丁文件并静默安装更新，需要重启的漏洞会进行提醒。|X|√|√|
+|漏洞管理|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。|√|√|√|
+|【漏洞修复】自研漏洞补丁，支持一键修复，通过文件替换、修改等方式从源代码级别修复漏洞。|X|√|√|
+|漏洞管理|应急漏洞|【应急漏洞检测】临时提供针对网络上突然出现的紧急漏洞的检测和修复服务。|√|√|√|
 |基线配置核查|主机基线|【主机基线检查】通过任务下发模式，对主机进行安全配置扫描，对未符合标准的项目进行提醒。【主机基线检查范围】
 
 -   账号安全：检测密码策略合规、系统及应用弱口令等。
@@ -89,7 +96,20 @@
 
 【自定义检测策略】支持自定义检测策略，设置检测项目、检测周期、应用的服务器组等。暂不支持自定义检测脚本。
 
-|X|√|
+|X|X|√|
+|攻击分析|攻击分析|【攻击分析】支持查看系统遭受的Web攻击详情和ECS遭受的暴力破解攻击等攻击信息。|X|X|√|
+|AK和账号密码泄露|AK和账号密码泄露|实时监控Github等第三方代码托管网站，捕获并判定被公开的源代码（包含企业员工私自上传并不小心公开的源代码）中是否含有ECS、RDS、Redis、MySQL等资产的登录名和密码信息。|X|X|√|
+|云平台最佳实践|云平台最佳实践|【云平台最佳实践】检测ECS、RDS等云产品的安全配置是否存在安全隐患。【检查范围】
+
+-   ECS：检测安全组端口访问策略是否过宽。
+-   SLB：检测是否转发不必要的端口至公网，增加系统受攻击风险。
+-   RDS：检测数据库是否公开在外网，以及是否配置访问白名单。
+-   Actiontrail：是否开启了操作日志审计，便于日志回溯。
+-   MFA：是否开启了双因素认证登录，防止阿里云账号被破解。
+-   其他：检测SLB白名单、RDS加密通信等。
+
+|√|√|√|
+|日志分析|全量日志分析|基于SLS日志，提供主机进程启动、对外网络连接、系统登录、五元组、DNS请求、安全日志和报警日志等量原始日志检索和分析。|X|增值|增值|
 |资产指纹|资产指纹|【端口】收集和呈现端口监听信息，记录变动历史，便于清点开放的端口信息。【账号】收集账号及对应权限信息，可清点特权账号，检测提权行为。
 
 【进程】收集和呈现进程快照信息，便于自主清点合法进程，检测异常进程。
@@ -98,23 +118,9 @@
 
 【网站后台】识别网站后台资产，监控是否有撞库和异常网站后台登录行为。
 
-|X|√|
-|日志检索|日志检索|**说明：** 日志检索功能将于近期下线。
-
-【主机日志】-   【系统登录】查询SSH、RDP的系统登录流水中登录成功的日志。
--   【暴力破解】查询SSH、RDP的系统登录流水中多次连续登录失败的日志。
--   【端口监听快照】系统抓取并存储某一时刻的所有对外监听端口的快照数据，使用日志功能可查询端口监听信息。
--   【账号快照】系统抓取并存储某一时刻的所有账号信息的快照数据，使用日志功能可查询账号信息。
--   【进程快照】系统抓取并存储某一时刻的进程全量日志，使用日志功能可查询进程快照信息。
--   【进程启动】进程一旦启动，系统记录下该启动事件的详细信息，使用日志功能可查询进程启动记录。
--   【网络连接日志】查询主机主动对外发起网络连接的记录。
-
-【网络日志】
-
--   【网络会话日志】主机端和网络端同时采集连接五元组信息，使用日志功能可查询网络会话记录。
--   【Web访问日志】系统从网络上抓取HTTP的访问日志，使用日志功能可查询Web访问记录。注：暂不支持HTTPS。
--   【DNS日志】查询对外请求的DNS解析日志。注：暂不支持内网DNS。
-
-|X|增值|
-|日志分析|全量日志分析|提供主机进程启动、对外网络连接、系统登录、五元组、DNS请求、安全日志和报警日志等量原始日志检索和分析。|X|增值|
+|X|X|√|
+|应用市场|可视化态势|支持查看业务运营监控、安全应急响应中心、安全感知体系、安全防御体系大图、业务访客概览等多种数据大屏。|X|增值|增值|
+|应用市场|自定义告警|支持用户自定义告警规则，实时检测威胁，支持第三方日志导入进行实时分析。|X|增值|增值|
+|应用市场|网页防篡改|可实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改，防止出现挂马、黑链、非法植入恐怖威胁、色情等内容。|X|增值|增值|
+|应用市场|微步威胁情报|提供第三方威胁情报源。|X|增值|增值|
 
