--- a/cn.zh-CN/产品定价/服务续费与升级.md
+++ b/cn.zh-CN/产品定价/服务续费与升级.md
@@ -1,40 +1,42 @@
 # 服务续费与升级 {#concept_qq3_dcc_zdb .concept}
 
-在态势感知企业版服务到期前，您需要对其续费，以享受正常的安全服务；您也可以在服务到期后3日内续费，以保留态势感知配置和数据。当您账号下的服务器数量超过当前配置的资产规模时，您需要对当前配置升级，即增加资产规模并补差价，才能继续使用态势感知企业版服务。
+在云安全中心企业版服务到期前，您需要对其续费，以享受正常的安全服务；您也可以在服务到期后3日内续费，以保留云安全中心配置和数据。当您账号下的服务器数量超过当前配置的资产规模时，您需要对当前配置升级，即增加资产规模并补差价，才能继续使用云安全中心企业版服务。
 
 ## 到期说明 {#section_ryq_dcc_zdb .section}
 
-态势感知企业版服务到期前7日，系统会以站内信的的方式通知您续费。如果在服务到期前，您没有及时续费，那么在服务到期日的次日，您将无法使用相应服务。
+云安全中心企业版服务到期前7日，系统会以站内信的的方式通知您续费。如果在服务到期前，您没有及时续费，那么在服务到期日的次日，您将无法使用相应服务。
 
-态势感知企业版服务到期后的3日内，系统会保留您在态势感知中的所有配置与数据，如资产分组、标签、文件隔离箱、漏洞白名单、基线检查模板、基线检查白名单，以及各种功能设置，资产指纹和安全日志数据等，您可以在此期间续费，以沿用当前配置与历史数据。
+云安全中心企业版服务到期后的3日内，系统会保留您在云安全中心中的所有配置与数据，如资产分组、标签、文件隔离箱、漏洞白名单、基线检查模板、基线检查白名单，以及各种功能设置，资产指纹和安全日志数据等，您可以在此期间续费，以沿用当前配置与历史数据。
 
-如果在态势感知企业版服务到期后的3日内，您没有续费，系统将释放当前配置和历史数据，且您只能通过重新购买来启用态势感知企业版服务。
+如果在云安全中心企业版服务到期后的3日内，您没有续费，系统将释放当前配置和历史数据，且您只能通过重新购买来启用云安全中心企业版服务。
 
 ## 续费流程 {#section_tyq_dcc_zdb .section}
 
-参照以下步骤，为您的态势感知企业版服务续费：
+参照以下步骤，为您的云安全中心企业版服务续费：
 
-1.  登录[云盾态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  单击页面右上角的**续费**。
 3.  确认订单配置，并选择续费时长。
 
     **说明：** 续费操作不支持调整资产规模（即实例保有量），以当前配置为准。
 
-4.  单击**去支付**，并完成支付。
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13628/15530134544471_zh-CN.png)
+
+4.  勾选同意**《云安全中心SAS（包月）服务协议》**，单击**去支付**，并完成支付。
 
 ## 升级说明 {#section_syq_dcc_zdb .section}
 
-在购买态势感知时，您需要设置要防护的资产规模，即使用态势感知保护的服务器数量，包括ECS云服务器和非阿里云服务器。资产规模不能小于当前账号下拥有的ECS服务器数量。如果您预计在购买时长内，您的资产规模将会扩大，建议将资产规模设置为您预计当前账号下将会拥有的服务器数量。
+在购买云安全中心时，您需要设置要防护的资产规模，即使用云安全中心保护的服务器数量，包括ECS云服务器和非阿里云服务器。资产规模不能小于当前账号下拥有的ECS服务器数量。如果您预计在购买时长内，您的资产规模将会扩大，建议将资产规模设置为您预计当前账号下将会拥有的服务器数量。
 
-在使用态势感知企业版服务期间，如果您账号下保有的服务器数量多于当前配置中的资产规模数，系统会提示您升级。您需要升级、增加资产规模并补差价后，才能继续使用态势感知企业版功能。
+在使用云安全中心企业版服务期间，如果您账号下保有的服务器数量多于当前配置中的资产规模数，系统会提示您升级。您需要升级、增加资产规模并补差价后，才能继续使用云安全中心企业版功能。
 
-例如，您已购买的态势感知企业版的资产规模是10台，则当您拥有13台服务器时，您需要先升级，增加资产规模到13台，并补齐这三台的差价后，才能继续使用态势感知企业版功能。
+例如，您已购买的云安全中心企业版的资产规模是10台，则当您拥有13台服务器时，您需要先升级，增加资产规模到13台，并补齐这三台的差价后，才能继续使用云安全中心企业版功能。
 
 ## 升级流程 {#section_wyq_dcc_zdb .section}
 
-参照以下步骤，升级您的态势感知企业版服务：
+参照以下步骤，升级您的云安全中心企业版服务：
 
-1.  登录[云盾态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  前往总览页，单击页面右上角的**升级**。
 
     **说明：** 只有当您的服务器数量超过当前配置中资产规模的120%时，总览页右上角才会出现**升级**按钮。
@@ -44,5 +46,5 @@
 
 ## 开通与购买日志分析服务 {#section_zh3_2yl_kfb .section}
 
-态势感知**企业版**支持全量日志分析服务，使用日志分析服务前需开通和购买服务。详细信息参见[开通日志分析服务](../../../../intl.zh-CN/用户指南/日志分析/开通日志分析服务.md#section_hb4_p5l_kfb)。
+云安全中心**企业版**支持全量日志分析服务，使用日志分析服务前需开通和购买服务。详细信息参见[开通日志分析服务](../../../../../cn.zh-CN/用户指南/日志分析/开通日志分析服务.md#section_hb4_p5l_kfb)。
 
