--- a/cn.zh-CN/用户指南/安全告警/查看和处理__批量处理告警事件.md
+++ b/cn.zh-CN/用户指南/安全告警/查看和处理__批量处理告警事件.md
@@ -1,29 +1,31 @@
 # 查看和处理/批量处理告警事件 {#concept_rlc_rts_sfb .concept}
 
-您可以通过阿里云态势感知控制台查看和处理安全告警事件，并通过告警自动关联全面了解和集中处理安全威胁或入侵。
+您可以通过阿里云云安全中心控制台查看和处理安全告警事件，并通过告警自动关联全面了解和集中处理安全威胁或入侵。
 
 ## 操作步骤 {#section_wxs_bsj_zdb .section}
 
-1.  登录[态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  在左侧导航栏选择**安全告警**打开**安全告警**列表。
 3.  在**安全告警**列表中查看或搜索所有检测到的入侵和威胁告警及其详细信息。
 
     您也可以使用搜索和页签筛选功能快速定位到特定事件。例如，您可以通过输入告警或资产名称、筛选告警严重等级、事件状态或告警类型来搜索相关的告警事件。
 
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155301422833906_zh-CN.png)
+
 4.  根据您的需求对不同告警事件执行相应处理。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155047021033907_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155301422833907_zh-CN.png)
 
-    -   **隔离**：仅限对**网站后门-发现后门（Webshell）文件**和**恶意进程（云查杀）**执行隔离操作。确认告警信息后，单击该操作可将网站后门文件加入文件隔离箱。被隔离的文件将无法对主机造成威胁，详细信息参见[文件隔离箱](intl.zh-CN/用户指南/安全告警/文件隔离箱.md#)。
+    -   **隔离**：仅限对**网站后门-发现后门（Webshell）文件**和**恶意进程（云查杀）**执行隔离操作。确认告警信息后，单击该操作可将网站后门文件加入文件隔离箱。被隔离的文件将无法对主机造成威胁，详细信息参见[文件隔离箱](cn.zh-CN/用户指南/安全告警/文件隔离箱.md#)。
 
         **说明：** 被成功隔离的文件在30天内可执行一键恢复，过期后系统将自动清除该文件。
 
     -   **确认线下处理**：确认告警并线下进行处理后，单击该操作后该告警状态将变为**已处理**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155047021035082_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155301422835082_zh-CN.png)
 
-    -   **忽略本次**：忽略本次告警，该告警状态将变为**已处理**，后续态势感知不会再对该事件进行告警。
-    -   **标记为误报**：标记本次告警为误报后该告警状态将变为**已处理**，后续态势感知不会再对该事件进行告警。您可以在**已处理**列表中定位到该事件对其进行**取消标记误报**的操作。
+    -   **忽略本次**：忽略本次告警，该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。
+    -   **标记为误报**：标记本次告警为误报后该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。您可以在**已处理**列表中定位到该事件对其进行**取消标记误报**的操作。
 
         **说明：** 告警误报是指系统对正常程序进行告警。常见的告警误报有对外异常TCP发包可疑进程，提示您服务器上有进程在对其他设备发起了疑似扫描行为。
 
@@ -32,7 +34,7 @@
 
 您也可以通过**安全告警**列表左下角的批量处理工具栏对多个告警事件进行批量处理。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155047021033908_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155301422833908_zh-CN.png)
 
 **说明：** 批量处理告警事件前请详细了解告警事件的信息。
 
