--- a/cn.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md
+++ b/cn.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md
@@ -1,10 +1,12 @@
 # 漏洞修复必要性说明 {#concept_d31_q2r_32b .concept}
 
-保护云上资产安全最重要的环节包括对漏洞修复进行优先级评定。如果您拥有的资产数量较多，您可能在控制台看到多个漏洞，这时优先修复哪些漏洞可能会成为您头疼的难题。为了解决这个问题，态势感知提供了一套新颖的评价标准，为您有序地修复漏洞提供参考。
+阿里云云安全中心可提供Linux软件漏洞、Windows系统漏洞、Web-CMS漏洞和应急漏洞的检测和修复服务。
+
+保护云上资产安全最重要的环节包括对漏洞修复进行优先级评定。如果您拥有的资产数量较多，您可能在控制台看到多个漏洞，这时优先修复哪些漏洞可能会成为您头疼的难题。为了解决这个问题，云安全中心提供了一套新颖的评价标准，为您有序地修复漏洞提供参考。
 
 ## 漏洞修复建议得分 {#section_rpd_w2r_32b .section}
 
-在评价一个**Linux软件漏洞**或**Windows系统漏洞**是否应该优先修复时，态势感知引入了漏洞修复建议得分，并根据漏洞修复建议得分将漏洞划分为三个级别：需尽快修复、可延后修复、暂可不修复。
+在评价一个**Linux软件漏洞**或**Windows系统漏洞**是否应该优先修复时，云安全中心引入了漏洞修复建议得分，并根据漏洞修复建议得分将漏洞划分为三个级别：需尽快修复、可延后修复、暂可不修复。
 
 **说明：** 应急漏洞和WebCMS漏洞均为阿里云安全工程师反复确认后的高危漏洞，所以统一建议您尽快修复。
 
@@ -38,12 +40,12 @@
     **说明：** 资产重要性因子为默认 1。
 
 
-从态势感知发现漏洞到计算出漏洞的修复建议得分，大约有48小时的延迟。
+从云安全中心发现漏洞到计算出漏洞的修复建议得分，大约有48小时的延迟。
 
 **说明：** 
 
 -   当一个漏洞刚被公布时，官方可能没有给出其CVSS基础分，这一部分漏洞的修复建议将会延迟到官方给出CVSS分后的48小时才能得出。
--   由于您的态势感知离线等网络异常问题可能导致环境因子无法计算，此时您需要等待网络环境恢复正常后的48小时才能看到修复建议。
+-   由于您的云安全中心离线等网络异常问题可能导致环境因子无法计算，此时您需要等待网络环境恢复正常后的48小时才能看到修复建议。
 
 ## 漏洞修复建议（必要性） {#section_jww_jgr_32b .section}
 
