--- a/cn.zh-CN/用户指南/攻击分析.md
+++ b/cn.zh-CN/用户指南/攻击分析.md
@@ -1,14 +1,14 @@
 # 攻击分析 {#concept_w4b_xxp_bgb .concept}
 
-态势感知**企业版**支持攻击分析，为您全面展示您资产受到的攻击并对攻击行为进行分析。
+云安全中心**企业版**支持攻击分析，为您全面展示您资产受到的攻击并对攻击行为进行分析。
 
 攻击分析基于阿里云平台的安全防护能力，为您提供基础攻击检测和防护。建议您根据自身业务需求，可考虑从防火墙和业务安全方面构建更精细化的纵深防护体系。
 
 **说明：** 原**攻击、访问、威胁**功能已下线。
 
-您可通过态势感知控制台**攻击分析**页面查看您资产受到的攻击详情。
+您可通过云安全中心控制台**攻击分析**页面查看您资产受到的攻击详情。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533918_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/155301453533918_zh-CN.png)
 
 **说明：** 对于新购买的云产品，需等待数据同步完成后才可看到新购云产品相关的攻击分析信息。
 
@@ -27,37 +27,37 @@
 
 攻击时间范围可选择**今天**、**最近7天**内或**最近30天**内。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533920_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/155301453533920_zh-CN.png)
 
 ## 攻击次数 {#section_bp1_bzp_bgb .section}
 
 您可在**攻击次数**区域查看指定时间范围内资产被攻击的总次数曲线图和攻击次数峰谷值。鼠标悬浮在曲线图上可展示攻击发生的日期和次数值。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533921_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/155301453533921_zh-CN.png)
 
 ## 攻击类型分布 {#section_ijj_zyp_bgb .section}
 
 您可在**攻击类型分布**区域查看攻击类型名称和该类型攻击发生的总次数。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533922_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/155301453533922_zh-CN.png)
 
 ## 攻击来源TOP5 {#section_ehk_zyp_bgb .section}
 
 您可在**攻击来源TOP5**区域查看攻击您资产次数排名前5的攻击源IP地址及其攻击次数。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533923_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/155301453533923_zh-CN.png)
 
 ## 被攻击资产TOP5 {#section_rdl_zyp_bgb .section}
 
 您可在**被攻击资产TOP5**区域查看您资产中被攻击次数排名前5的资产公网IP地址及其被攻击次数。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533925_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/155301453533925_zh-CN.png)
 
 ## 攻击详情列表 {#section_u1m_zyp_bgb .section}
 
 您可在攻击详情列表中查看您资产受到的攻击详细信息，包含攻击发生的时间、攻击源IP地址、被攻击的资产信息、攻击类型和攻击状态。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533926_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/155301453533926_zh-CN.png)
 
 **说明：** 攻击详情列表展示攻击数据上限为10000条。如需查看更多数据可切换**时间范围**查看指定时间范围内的全部攻击数据。
 
@@ -69,13 +69,13 @@
 |攻击来源|攻击的源IP地址。|
 |被攻击资产|被攻击资产的名称和公网、私网IP地址。|
 |攻击类型|攻击事件的类型，如SSH暴力破解、代码执行等。|
-|攻击状态|攻击事件当前所处的状态。态势感知在检测到攻击事件的同时基于云平台防御能力对常见攻击进行防御，已防御的攻击事件状态为**已防御**。异常入侵事件将会展示在**安全告警**中。|
+|攻击状态|攻击事件当前所处的状态。云安全中心在检测到攻击事件的同时基于云平台防御能力对常见攻击进行防御，已防御的攻击事件状态为**已防御**。异常入侵事件将会展示在**安全告警**中。|
 
 您可在攻击详情列表右上方通过筛选指定的攻击类型、被攻击资产或攻击源IP地址，搜索指定的攻击事件并查看其详细信息。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533927_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/155301453533927_zh-CN.png)
 
 单击**被攻击资产**名称可跳转到该资产的详情页面，查看被攻击资产的基本信息、漏洞信息、基线检查漏洞、全部告警信息、资产指纹和安全配置信息。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533928_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/155301453533928_zh-CN.png)
 
