--- a/cn.zh-CN/用户指南/日志分析/查询实时日志分析/查询日志.md
+++ b/cn.zh-CN/用户指南/日志分析/查询实时日志分析/查询日志.md
@@ -1,32 +1,32 @@
 # 查询日志 {#concept_yq1_pp3_kfb .concept}
 
-阿里云态势感知与日志服务打通，对外开放平台相关或者产生的日志，包括网络、主机、安全三大类共14种子类日志。提供近实时的日志自动采集存储、并提供基于日志服务的查询分析、报表报警、下游计算对接与投递的能力。
+阿里云云安全中心与日志服务打通，对外开放平台相关或者产生的日志，包括网络、主机、安全三大类共14种子类日志。提供近实时的日志自动采集存储、并提供基于日志服务的查询分析、报表报警、下游计算对接与投递的能力。
 
 选择特定类型的日志，即可对采集到的日志数据进行实时查询与分析、查看或编辑仪表盘、设置监控告警等。
 
 ## 操作步骤 {#section_cpw_qq3_kfb .section}
 
-1.  登录[态势感知管理控制台](https://yundunnext.console.aliyun.com/?p=sasnext#/logAnalyze/ap-southeast-3)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  在左侧导航栏中选择**日志分析** 。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/154821105737891_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/155301466537891_zh-CN.png)
 
 3.  在日志分析页面选择您需要查看的日志类型，并将状态设置为**启用**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/154821105737893_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/155301466537893_zh-CN.png)
 
     您还可以在**日志分析**页面进行以下操作：
 
     -   单击**日志分析**打开日志服务查询和分析页面，页面将展示您选择的日志类型的查询和分析页面，并且系统会为您自动匹配查询语句。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/154821105737898_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/155301466537898_zh-CN.png)
 
     -   单击**搜索**按钮上方的时间设置下拉框选择日志时间范围，然后单击**搜索**按钮查看您所选时间范围内的日志信息。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/154821105837899_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/155301466537899_zh-CN.png)
 
-        **说明：** 态势感知日志可保存180天，每条日志会在其日志时间的第180天被删除。
+        **说明：** 云安全中心日志可保存180天，每条日志会在其日志时间的第180天被删除。
 
-        **说明：** 态势感知支持对7天内的日志进行查询和分析。如需搜索或分析超过7天的日志数据，请提交工单了解详情。
+        **说明：** 云安全中心支持对7天内的日志进行查询和分析。如需搜索或分析超过7天的日志数据，请提交工单了解详情。
 
 
