--- a/cn.zh-CN/用户指南/自定义告警/添加规则组.md
+++ b/cn.zh-CN/用户指南/自定义告警/添加规则组.md
@@ -4,18 +4,18 @@
 
 ## 操作步骤 {#section_kjk_4t5_mfb .section}
 
-1.  登录[态势感知控制台](https://yundun.console.aliyun.com/?spm=5176.2020520001.aliyun_sidebar.42.40ab4bd3FrOsoy&p=sas#/sas/overviews)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  单击左侧导航栏**自定义告警**打开自定义告警页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155054197813862_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155301472513862_zh-CN.png)
 
 3.  在自定义告警页面单击**规则组**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155054197813865_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155301472513865_zh-CN.png)
 
 4.  在规则组页签单击**添加规则组**打开添加规则组页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155054197813864_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155301472513864_zh-CN.png)
 
 5.  输入**规则组名称**。
 
@@ -24,11 +24,11 @@
 6.  输入**规则组描述**对正在创建的规则组进行描述或备注。
 7.  在**应用资产组**下拉列表中勾选应用规则组的资产组名称。
 
-    您可在态势感知控制台[资产列表](cn.zh-CN/用户指南/资产列表.md#)页面使用**资产分组管理**功能添加或修改资产分组。
+    您可在云安全中心控制台[资产列表](cn.zh-CN/用户指南/资产列表.md#)页面使用**资产分组管理**功能添加或修改资产分组。
 
-8.  在**规则**模块中勾选已创建的告警规则，单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155054197813900_zh-CN.png)按钮将其添加到规则组中。
+8.  在**规则**模块中勾选已创建的告警规则，单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155301472513900_zh-CN.png)按钮将其添加到规则组中。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155054197813899_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155301472513899_zh-CN.png)
 
     您还可以在对话框中通过规则**危险等级**和**规则名称**筛选您需要添加的规则。
 
@@ -37,7 +37,7 @@
 9.  单击**确定**完成规则组添加。
 10. 您可在规则组列表页签最右侧**操作**栏单击**编辑**修改规则组，或单击**删除**对已创建的规则组进行删除。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155054197813866_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23958/155301472513866_zh-CN.png)
 
     删除的规则组不可恢复。
 
