--- a/cn.zh-CN/用户指南/日志分析/限制说明.md
+++ b/cn.zh-CN/用户指南/日志分析/限制说明.md
@@ -1,6 +1,6 @@
 # 限制说明 {#concept_b5x_z2y_kfb .concept}
 
-云安全中心的日志库属于专属日志库。
+云安全中心全量日志集中存放在`sas-log`专属日志库中，您可以在储存日志服务的项目`sas-log-阿里云账户ID-区域名`中找到专属日志库。
 
 ## 日志库限制说明 {#section_ecs_2fy_kfb .section}
 
