--- a/intl.zh-CN/用户指南/安全告警/安全告警类型.md
+++ b/intl.zh-CN/用户指南/安全告警/安全告警类型.md
@@ -1,16 +1,19 @@
 # 安全告警类型 {#concept_l5g_fzc_zdb .concept}
 
-态势感知支持进程异常、网站后门、异常登录、恶意进程等安全告警类型，通过全面的安全告警类型帮助您实时掌握您主机的安全态势。
+云安全中心支持网页防篡改、进程异常、网站后门、异常登录、恶意进程等安全告警类型，通过全面的安全告警类型帮助您实时掌握您资产的安全态势。
 
 **安全告警类型**
 
 **说明：** 
 
--   2018年12月20日起，态势感知**基础版**只支持异常登录和其他-DDoS类型安全告警，若您需要启用更多高级威胁检测能力，需开通态势感知企业版服务）。
--   态势感知**基础版**和**企业版**可检测的告警类型差异参见[功能特性列表](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
+-   2018年12月20日起，云安全中心**基础版**只支持异常登录和其他-DDoS类型安全告警，若您需要启用更多高级威胁检测能力，需开通云安全中心高级版和企业版服务）。
+-   云安全中心**基础版**、**高级版**和**企业版**可检测的告警类型差异参见[功能特性列表](../../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
 |告警名称|告警说明|
 |----|----|
+|网页防篡改|实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改，防止出现挂马、黑链、非法植入恐怖威胁、色情等内容。详情参见[网页防篡改](intl.zh-CN/用户指南/网页防篡改/概述.md#)。
+
+|
 |**进程异常行为**|检测资产中是否存在超出正常执行流程的行为。|
 |**网站后门**|使用自主查杀引擎检测常见后门文件，支持定期查杀和实时防护，并提供一键隔离功能：-   Web目录中文件发生变动会触发动态检测，每日凌晨扫描整个Web目录进行静态检测。
 -   支持针对网站后门检测的资产范围配置。
@@ -20,9 +23,11 @@
 |**异常登录**|检测服务器上的异常登录行为。通过设置合法登录IP、时间及账号，对于例外的登录行为进行告警。支持手动添加和自动更新常用登陆地，对指定资产的异地登陆行为进行告警。|
 |**异常事件**|程序运行过程中发生的异常行为。|
 |**敏感文件篡改**|对服务器中的敏感文件进行恶意修改。|
-|**恶意进程（病毒云查杀）**|采用云+端的查杀机制，对服务器进行实时检测，并对检测到的病毒文件提供实时告警。您可通过控制台对病毒程序进行处理。详细信息参见[病毒云查杀](intl.zh-CN/产品简介/产品优势/病毒云查杀.md#)。|
+|**恶意进程（病毒云查杀）**|采用云+端的查杀机制，对服务器进行实时检测，并对检测到的病毒文件提供实时告警。您可通过控制台对病毒程序进行处理。详细信息参见[病毒云查杀](intl.zh-CN/用户指南/安全告警/病毒云查杀.md#)。|
 |**异常网络连接**|网络显示断开或不正常的网络连接状态。|
 |**异常账号**|非合法登陆账号。|
 |**云产品威胁检测**|态势感知检测到您购买的其他阿里云产品存在的威胁。|
+|**精准防御**|开启**病毒查杀**提供精准防御能力，可对主流勒索病毒、DDOS木马、挖矿和木马程序、恶意程序、后门程序和蠕虫病毒等类型进行防御。|
+|**应用入侵事件**|通过系统的应用组件入侵服务器的告警事件。|
 |**其他**|DDOS流量攻击等网络入侵行为。|
 
