--- a/intl.zh-CN/用户指南/安全告警/安全告警类型.md
+++ b/intl.zh-CN/用户指南/安全告警/安全告警类型.md
@@ -11,7 +11,7 @@
 
 |告警名称|告警说明|
 |----|----|
-|网页防篡改|实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改，防止出现挂马、黑链、非法植入恐怖威胁、色情等内容。详情参见[网页防篡改](intl.zh-CN/用户指南/网页防篡改/概述.md#)。
+|**网页防篡改**|实时监控网站目录并通过备份恢复被篡改的文件或目录，保障重要系统的网站信息不被恶意篡改，防止出现挂马、黑链、非法植入恐怖威胁、色情等内容。详情参见[网页防篡改](intl.zh-CN/用户指南/网页防篡改/概述.md#)。
 
 |
 |**进程异常行为**|检测资产中是否存在超出正常执行流程的行为。|
