--- a/intl.zh-CN/用户指南/基线检查/新增和配置基线检查策略.md
+++ b/intl.zh-CN/用户指南/基线检查/新增和配置基线检查策略.md
@@ -2,13 +2,15 @@
 
 本文档介绍了如何新增基线检查策略和对策略进行编辑、删除等操作。
 
+基线检查功能为云安全中心的增值服务，仅**企业版**用户可开通和使用该服务。基础版和高级版用户都需先升级到企业版才可使用基线检查功能。
+
 开通基线检查服务后，云安全中心将使用**默认策略**对所有资产进行检测。
 
 默认策略自动检测时间：每天06:00-12:00
 
 默认策略检测对象：您阿里云账号下的所有资产
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41642/155300294841077_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41642/155307418941077_zh-CN.png)
 
 您也可自定义基线检查策略，补充默认策略无法检测的基线项目。
 
@@ -19,7 +21,7 @@
 3.  单击控制台界面右上角**策略管理**自定义基线检查策略或对默认策略进行修改。
     -   单击策略配置页面右上角**新增策略**，自定义基线扫描策略。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41642/155300294841084_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41642/155307418941084_zh-CN.png)
 
         |配置项|说明|
         |---|--|
@@ -40,6 +42,6 @@
 
         **说明：** 默认策略不可删除、检测项不可更改，但您可以修改应用默认策略的资产分组。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41642/155300294841078_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41642/155307419041078_zh-CN.png)
 
 
