--- a/intl.zh-CN/产品简介/应用场景.md
+++ b/intl.zh-CN/产品简介/应用场景.md
@@ -1,6 +1,6 @@
 # 应用场景 {#concept_zks_bwb_zdb .concept}
 
-态势感知的典型应用场景包括：
+云安全中心的典型应用场景包括：
 
 -   实时监控云上业务整体安全，对多种安全事件进行告警，如异常登录、网站后门、病毒攻击、异常进程等。
 -   定期对云上服务进行漏洞扫描和基线配置核查，针对检测到的漏洞和风险配置项提供监控与修复服务。
