--- a/intl.zh-CN/用户指南/资产列表.md
+++ b/intl.zh-CN/用户指南/资产列表.md
@@ -1,49 +1,49 @@
 # 资产列表 {#concept_mvx_jlc_zdb .concept}
 
-资产列表帮助您查看态势感知已防护的服务器的安全状态。为便于对服务器资产进行安全管控，资产列表提供了资产分组和标签分类功能。您可以将资产分组，以组别的维度查看安全事件；也可以通过资产标签筛选具有相同属性的资产。
+资产列表帮助您查看云安全中心已防护的服务器的安全状态。为便于对服务器资产进行安全管控，资产列表提供了资产分组和标签分类功能。您可以将资产分组，以组别的维度查看安全事件；也可以通过资产标签筛选具有相同属性的资产。
 
 ## 查看资产保护状态 {#section_w2f_khj_zdb .section}
 
 参照以下步骤，查看资产保护状态：
 
-1.  登录[云盾态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  在左侧导航栏，单击**资产列表**，查看态势感知已防护的服务器的保护状态。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
+2.  在左侧导航栏，单击**资产列表**，查看云安全中心已防护的服务器的保护状态。
 3.  展开筛选栏，使用搜索和筛选功能快速定位到特定资产。
     -   在搜索框中输入一个服务器的IP进行搜索，查看某台服务器的安全状态。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/4854_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523054854_zh-CN.png)
 
     -   使用**资产类型**、**标签**、**地域**、**安全状态**、**Agent**、**操作系统**、**所有分组**筛选项，筛选出特定服务器。
 
         **说明：** 当筛选项中的子项太多不便查找时，您可以使用筛选项右侧的排序按钮进行排序（**所有分组**不支持此操作）。资产列表筛选项支持的排序方式包括A to Z/Z to A（筛选项名称字母组合升序、降序），1 to 9/9 to 1（筛选项下的资产数量升序、降序）。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/4855_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523064855_zh-CN.png)
 
         -   单击上述筛选项下的任意子项，直接显示筛选结果。例如，单击**地域**下的**华东1**，直接显示华东1下的资产。
         -   勾选一个筛选项下的多个子项，并单击该筛选项下的**应用**，可筛选一个筛选项下的多个结果。例如，勾选**地域**下的**华东1**和**华北1**，并单击**地域**下的**应用**，可以显示华东1和华北1下的资产。
         -   同时应用多个筛选项。例如，已筛选**地域**为**华东1**以后，可以再筛选**操作系统**为**linux**，只显示华东1地域中的Linux系统的服务器。
         **说明：** 对于已应用的筛选项组合，您可以将其保存为常用筛选条件。单击**保存**，在保存搜索条件对话框为该筛选条件命名（例如华东1，Linux）后，就可以在页面右上角的条件框中直接选用该筛选条件。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/4857_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523064857_zh-CN.png)
 
 4.  单击资产列表页右上角的**设置列**按钮，可以设置需要显示的列内容。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/4858_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523064858_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/4859_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523064859_zh-CN.png)
 
 
 ## 暂停/开启保护 {#section_gff_khj_zdb .section}
 
-如果您在一段时间内不希望态势感知Agent占用您的ECS云服务器资源，您可以参照以下步骤，暂停对该服务器的安全防护：
+如果您在一段时间内不希望云安全中心Agent占用您的ECS云服务器资源，您可以参照以下步骤，暂停对该服务器的安全防护：
 
 1.  在资产列表中，勾选一个或多个**保护状态**为**保护中**的目标服务器。
 2.  单击资产列表下方的**更多操作** \> **暂停保护**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/4860_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523064860_zh-CN.png)
 
 
-暂停保护后，态势感知Agent插件停止工作，不再收集上报您服务器上的安全信息，也不再占用系统资源。您可以通过**更多操作** \> **开启保护**，对暂停保护的服务器重新开启保护。
+暂停保护后，云安全中心Agent插件停止工作，不再收集上报您服务器上的安全信息，也不再占用系统资源。您可以通过**更多操作** \> **开启保护**，对暂停保护的服务器重新开启保护。
 
 ## 一键安全检查 {#section_jff_khj_zdb .section}
 
@@ -55,11 +55,11 @@
 2.  单击资产列表下方的**一键安全检查**。
 3.  在安全检查对话框，勾选需要执行的检查项目。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/4861_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523064861_zh-CN.png)
 
 4.  单击**确认**，执行检查。
 
-一键安全检查结束后，最新的检查结果会自动更新到态势感知控制台。
+一键安全检查结束后，最新的检查结果会自动更新到云安全中心控制台。
 
 ## 管理分组 {#section_mff_khj_zdb .section}
 
@@ -70,7 +70,7 @@
 1.  展开筛选栏后，在筛选栏最下面单击**所有分组**右侧的**管理**，打开资产分组管理对话框。
 2.  创建资产分组。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/6423_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523066423_zh-CN.jpg)
 
     **说明：** 未进行资产分组时，所有的资产都在**未分组**中。当您删除某个分组时，该分组中的资产也默认被移入**未分组**。
 
@@ -95,7 +95,7 @@
 1.  在资产列表页，勾选一个或多个服务器资产，单击资产列表下方的**更换分组**。
 2.  选择一个新的资产分组，将选定的服务器资产划分到该分组。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/4863_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523064863_zh-CN.png)
 
     **说明：** 服务器资产与子分组不能归属在同一级资产分组。例如，资产分组A下已有子分组B，则您无法将服务器资产C放至资产分组A中。
 
@@ -112,19 +112,19 @@
 
     **说明：** 勾选一个或多个资产，单击资产列表下方的**编辑标签**，可以批量添加或修改目标资产的标签。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/6424_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523066424_zh-CN.jpg)
 
 3.  在添加标签（或编辑标签）对话框中输入标签名或选择已有标签。
 
     **说明：** 一个资产支持添加多个标签。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/6427_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523066427_zh-CN.jpg)
 
 4.  单击**确认**，完成添加。
 
 ## 删除非阿里云机器 {#section_vff_khj_zdb .section}
 
-如果您不希望态势感知继续防护您的非阿里云主机，您可以从资产列表中移除该非阿里云主机。
+如果您不希望云安全中心继续防护您的非阿里云主机，您可以从资产列表中移除该非阿里云主机。
 
 **说明：** 对于阿里云ECS服务器，即使您卸载了Agent插件，该服务器仍将以离线状态出现在资产列表中，不会被移除。
 
@@ -133,7 +133,7 @@
 1.  在资产列表中，勾选一个或多个非阿里云服务器。
 2.  选择资产列表下方的**更多操作** \> **删除非阿里云机器**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/4864_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13636/15531523064864_zh-CN.png)
 
 3.  单击**确定**，系统会自动卸载安装在您服务器上的Agent插件，并将目标服务器从资产列表中移除。
 
