--- a/intl.zh-CN/用户指南/安全告警/查看告警溯源和排查方案.md
+++ b/intl.zh-CN/用户指南/安全告警/查看告警溯源和排查方案.md
@@ -4,12 +4,12 @@
 
 ## 操作步骤 {#section_pxz_mbx_bgb .section}
 
-1.  登录[态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  在左侧导航栏选择**安全告警**打开**安全告警**列表。
 3.  在**安全告警**页面单击**溯源**打开**溯源**页签。
 
     您可查看攻击溯源信息的入侵原因、攻击源IP、HTTP请求详情、攻击排查方案和攻击请求的详细内容。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/154451012134047_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/155315267934047_zh-CN.png)
 
 
