--- a/intl.zh-CN/用户指南/日志分析/查询实时日志分析/快速分析.md
+++ b/intl.zh-CN/用户指南/日志分析/查询实时日志分析/快速分析.md
@@ -1,12 +1,14 @@
 # 快速分析 {#concept_d53_llj_kfb .concept}
 
-态势感知日志分析服务提供快速分析功能，为您提供一键交互式查询体验，帮助您快速分析某一字段在一段时间内的分布情况，减少索引关键数据的时间成本。
+日志分析服务提供快速分析功能，为您提供一键交互式查询体验，帮助您快速分析某一字段在一段时间内的分布情况，减少索引关键数据的时间成本。
 
-您可在原始日志页面左侧**快速分析**列表查看日志包含的字段以及对应的占比数据。单击日志名称右侧的图标![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22761/153909449613490_zh-CN.png)查看快速分析结果。
+您可在原始日志页面左侧**快速分析**列表查看日志包含的字段以及对应的占比数据。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22761/153909449613489_zh-CN.png)
+单击日志名称右侧的图标![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22761/155315386213490_zh-CN.png)查看快速分析结果。
 
-您也可以单击快速分析列右下角的图标![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22761/153909449613491_zh-CN.png)跳转到统计图表页面。
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22761/155315386213489_zh-CN.png)
 
-详细信息参见[快速分析](https://help.aliyun.com/document_detail/66275.html)。
+您也可以单击快速分析列右下角的图标![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22761/155315386213491_zh-CN.png)跳转到统计图表页面。
+
+详细信息参见[快速分析](../../../../../intl.zh-CN/用户指南/查询与分析/查询语法与功能/快速分析.md#)。
 
