--- a/intl.zh-CN/用户指南/日志分析/高级管理.md
+++ b/intl.zh-CN/用户指南/日志分析/高级管理.md
@@ -1,18 +1,18 @@
 # 高级管理 {#concept_rjj_ltz_kfb .concept}
 
-态势感知日志分析服务提供高级管理功能，您可使用高级管理功能进行告警与通知、实时订阅与消费、数据投递和对接其他可视化等高级操作。
+云安全中心日志分析服务提供高级管理功能，您可使用高级管理功能进行告警与通知、实时订阅与消费、数据投递和对接其他可视化等高级操作。
 
 ## 操作步骤 {#section_xwt_h5z_kfb .section}
 
-1.  登录[态势感知控制台](https://account.alibabacloud.com/login/login.htm)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  单击左侧导航栏**日志分析**。
 3.  单击**日志分析**页面右上角的**高级设置**按钮。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/155237029313596_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/155315394713596_zh-CN.png)
 
 4.  在日志服务高级管理对话框中单击**前往**打开日志库控制台进行相关操作。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/155237029313597_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/155315394713597_zh-CN.png)
 
     具体高级操作参见：
 
