--- a/intl.zh-CN/用户指南/资产指纹.md
+++ b/intl.zh-CN/用户指南/资产指纹.md
@@ -1,6 +1,6 @@
 # 资产指纹 {#concept_lyd_4zc_zdb .concept}
 
-态势感知资产指纹功能定期收集并记录服务器上的以下信息：运行进程、系统账号、开放端口、软件版本和网站后台，帮助您全面了解资产的运行状态，便于回溯分析。本文介绍了使用资产指纹查看相关记录的操作方法。
+云安全中心资产指纹功能定期收集并记录服务器上的以下信息：运行进程、系统账号、开放端口、软件版本和网站后台，帮助您全面了解资产的运行状态，便于回溯分析。本文介绍了使用资产指纹查看相关记录的操作方法。
 
 ## 功能说明 {#section_vxt_wrk_zdb .section}
 
@@ -18,35 +18,35 @@
 
 您可以通过资产列表进入单个资产的详情页，在该详情页查看该资产的资产指纹信息。通过此方式可以查看指定资产的运行进程、系统账号、开放端口、软件版本的实时和历史变更信息；不支持查看网站后台信息。
 
-1.  登录[云盾态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  前往资产列表页，选择要查看的资产，单击其**资产IP/名称**。
 3.  在指定资产的详情页面，单击**资产指纹**。
     -   **查看指定资产上的运行进程**
         1.  前往运行进程子页，查看该资产上所有运行中的进程。您可以使用进程名或运行用户进行搜索。
         2.  选择**数据类型**为**历史变动**，查看其运行进程变动情况，包括**发现新进程**和**进程停止**。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15416925116445_zh-CN.jpg)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15531546506445_zh-CN.jpg)
 
         3.  单击一个进程名，查看其详细信息。
     -   **查看指定资产上的账号信息**
         1.  前往账号信息子页，查看该资产上所有已登录的系统账号。您可以使用账号名进行搜索。
         2.  选择**数据类型**为**历史变动**，查看其账号信息变动情况，包括**创建账号**、**删除账号**、和**修改账号**。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15416925116447_zh-CN.jpg)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15531546506447_zh-CN.jpg)
 
         3.  单击一个账号名，查看其详细信息。
     -   **查看指定资产上的监听端口**
         1.  前往监听端口子页，查看该资产上所有已开放端口和端口对应的网络协议。您可以使用端口号或进程名进行搜索。
         2.  选择**数据类型**为**历史变动**，查看其监听端口变动情况，包括**新增监听**和**停止监听**。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15416925116446_zh-CN.jpg)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15531546506446_zh-CN.jpg)
 
         3.  单击一个端口号，查看其详细信息。
     -   **查看指定资产上的软件信息**
         1.  前往软件管理子页，查看该资产上所有使用中的软件。您可以使用软件名、版本名、或软件安装目录进行搜索。
         2.  选择**数据类型**为**历史变动**，查看其软件版本变动情况，包括**软件安装**、**软件卸载**、和**版本更新**。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15416925116448_zh-CN.jpg)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15531546506448_zh-CN.jpg)
 
         3.  单击一个软件名，查看其详细信息。
 
@@ -56,36 +56,36 @@
 
 参照以下步骤，查看全部资产的资产指纹信息：
 
-1.  登录[云盾态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  在左侧导航栏，选择**更多功能**。
 3.  在更多功能页面，选择**资产指纹**。
     -   **查看服务器运行进程**
         1.  前往运行进程子页，查看所有运行中进程和运行这些进程的主机数。您可以使用进程名或运行用户进行搜索。
         2.  单击一个进程名，查看其详细信息。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15416925114944_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15531546504944_zh-CN.png)
 
     -   **查看系统账号**
         1.  前往系统账号子页，查看所有已登录的系统账号和使用这些账号的主机数。您可以使用账号名进行搜索。
         2.  单击一个账号名，查看其详细信息。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15416925114945_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15531546504945_zh-CN.png)
 
     -   **查看开放端口**
         1.  前往开放端口子页，查看所有已开放端口、端口对应的网络协议、和开放这些端口的主机数。您可以使用端口号或进程名进行搜索。
         2.  单击一个端口号，查看其详细信息。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15416925114946_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15531546504946_zh-CN.png)
 
     -   **查看软件版本**
         1.  前往软件版本子页，查看所有使用中的软件和使用这些软件的主机数。您可以使用软件名、版本名、或软件安装目录进行搜索。
         2.  单击一个软件名，查看其版本等信息。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15416925114947_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15531546504947_zh-CN.png)
 
     -   **查看网站后台登录记录**：前往网站后台子页，查看所有网站后台登录记录，以及登录弱密码检测结果、撞库攻击检测结果。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15416925114948_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15531546504948_zh-CN.png)
 
 
 ## 资产指纹设置 {#section_vyt_wrk_zdb .section}
@@ -94,13 +94,13 @@
 
 参照以下步骤，设置资产数据的收集刷新频率：
 
-1.  登录[云盾态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  在左侧导航栏，单击**更多功能**。
 3.  在更多功能页面，选择**资产指纹**。
 4.  单击页面右上角**资产指纹设置**。
 5.  完成以下配置：
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15416925116444_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13642/15531546506444_zh-CN.jpg)
 
     -   选择**监听端口数据自动刷新**频率：不开启、1小时/3小时/12小时/1天/7天收集1次。
     -   选择**运行进程数据自动刷新**频率：不开启、1小时/3小时/12小时/1天/7天收集1次。
